--- a/app/src/styles/_colors.scss
+++ b/app/src/styles/_colors.scss
@@ -16,12 +16,12 @@ $status-active-font: rgb(240, 243, 247);
 $status-pending-font: rgb(240, 243, 247);
 $status-disable-font: rgb(22, 10, 11);
 
-$msg-info-bg: rgb(179, 247, 241);
+$msg-info-bg: rgb(125, 224, 216);
 $msg-info-font: rgb(6, 95, 95);
 $msg-warning-bg: rgb(231, 225, 144);
 $msg-warning-font: rgb(235, 111, 10);
-$msg-accent-bg: rgb(240, 155, 155);
-$msg-accent-font: rgb(122, 9, 9);
+$msg-error-bg: rgb(240, 155, 155);
+$msg-error-font: rgb(122, 9, 9);
 
 $btn-font-light: rgb(248, 244, 244);
 $btn-font-dark: rgb(24, 4, 4);
