--- a/app/src/components/MessageBox/MessageBox.module.scss
+++ b/app/src/components/MessageBox/MessageBox.module.scss
@@ -1,7 +1,24 @@
 @import '../../styles/colors';
 
 .messageBox {
-  padding: 10px 25px;
+  padding: 25px 45px;
   margin: 13px 0;
   border-radius: 5px;
+  min-height: 100px;
+  font-weight: bold;
+
+  &.info {
+    background-color: $msg-info-bg;
+    color: $msg-info-font;
+  }
+
+  &.warning {
+    background-color: $msg-warning-bg;
+    color: $msg-warning-font;
+  }
+
+  &.error {
+    background-color: $msg-error-bg;
+    color: $msg-error-font;
+  }
 }
