--- a/app/src/components/Profile/Profile.module.scss
+++ b/app/src/components/Profile/Profile.module.scss
@@ -1,25 +1,30 @@
 @import '../../styles/colors';
 
-.badge {
-  padding: 5px;
-  margin: 3px;
-  border-radius: 3px;
-  font-weight: bold;
-  text-align: center;
-  width: fit-content;
+.banner {
+  background-image: url('../../assets/bg-profile.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 17vh;
+}
 
-  &.active {
-    background-color: $status-active-bg;
-    color: $status-active-font;
+.profile {
+  .propertyList {
+    *{
+      font-size: 1.2rem;
+    }
+    li {
+      margin-bottom: 15px;
+      display: flex;
+      align-items: center;
+    }
   }
-
-  &.disable {
-    background-color: $status-disable-bg;
-    color: $status-pending-font;
-  }
-
-  &.pending {
-    background-color: $status-pending-bg;
-    color: $status-disable-font;
+  .description {
+    color: $accent;
+    font-weight: bold;
+    margin-right: 5px;
+    i {
+      margin-right: 5px;
+    }
   }
 }
+  
