--- a/app/src/components/AccountsTable/AccountsTable.module.scss
+++ b/app/src/components/AccountsTable/AccountsTable.module.scss
@@ -3,6 +3,7 @@
 .accountsTable {
   width: 100%;
   border-collapse: collapse;
+  margin-top: 70px;
   thead tr {
     border-bottom: 2px solid $tertiary;
     
