--- a/app/src/pages/AccountsPage/AccountsPage.module.scss
+++ b/app/src/pages/AccountsPage/AccountsPage.module.scss
@@ -3,3 +3,9 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.modalBlock {
+  background-color: #fff;
+  padding: 15px;
+  border-radius: 3px;
+}
